Fixed bug #210257: [table] Removed rows in virtual tables can still be selected